<resources>
    <string name="app_name">My Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">Developer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Sign in</string>
    <string name="create">Create by Eka Sinta Aprilia</string>
    <string name="newaccount">Create a new Account?</string>
    <string name="silahkanlogin">Silahkan login untuk menggunakan aplikasi</string>
    <string name="email">Email</string>
    <string name="gambaratas">gambaratas</string>
    <string name="gambarbawah">gambarbawah</string>
</resources>