<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg"
    android:orientation="vertical"
    tools:context="LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/myshop"
        android:contentDescription="@string/gambaratas" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/silahkanlogin"
        android:textColor="@color/black"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ILusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:startIconDrawable="@drawable/ic_username"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:inputType="text"
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom"
            android:hint="@string/username"
            android:textColorHint="#00838F"
            tools:ignore="TextContrastCheck"
            android:autofillHints="Username" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ILPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:startIconDrawable="@drawable/ic_password"
        app:endIconDrawable="@drawable/ic_show"
        app:startIconTintMode="multiply"
        app:endIconMode="password_toggle"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <EditText
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_show"
            android:background="@drawable/custom"
            android:autofillHints="Password" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btnLogin"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/custombutton"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/newaccount"
        android:textColor="@color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="117"
        android:contentDescription="@string/gambarbawah"
        android:paddingTop="20dp"
        android:src="@drawable/gambarbawah"
        tools:ignore="ImageContrastCheck" />

</LinearLayout>



